--- a/portafolio-cv/index.html
+++ b/portafolio-cv/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hola bienvenido a mi portafolio-CV, soy Carlos Mario Toro, Desarrollador Web.">
-    <link rel="canonical" href="">
-    <link rel="favicon" href="favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="canonical" href="https://carlosmariotoro.github.io/portafolio-cv/portafolio-cv">
+    <link rel="favicon" href="https://carlosmariotoro.github.io/portafolio-cv/portafolio-cv/assets/favicon.png">
+    <link rel="apple-touch-icon" href="https://carlosmariotoro.github.io/portafolio-cv/portafolio-cv/assets/favicon.png">
     <meta name="theme-color" content="#D90062">
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:title" name="twitter:title" content="Portafolio-CV">
     <meta property="og:description" name="twitter:description" content="Hola bienvenido a mi portafolio-CV, soy Carlos Mario Toro, Desarrollador Web.">
-    <meta property="og:image" name="twitter:image" content="./assets/hero-image-home.jpg">
-    <meta property="og:url" name="twitter:url" content="">
+    <meta property="og:image" name="twitter:image" content="https://carlosmariotoro.github.io/portafolio-cv/portafolio-cv/assets/hero-image-home.jpg">
+    <meta property="og:url" name="twitter:url" content="https://carlosmariotoro.github.io/portafolio-cv/portafolio-cv">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
